src/test/ui/associated-consts/issue-24949-assoc-const-static-recursion-impl.stderr
error[E0391]: cycle detected when elaborating drops for `<impl at $DIR/issue-24949-assoc-const-static-recursion-impl.rs:11:1: 11:19>::BAR`
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:12:22
   |
LL |     const BAR: u32 = IMPL_REF_BAR;
   |                      ^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `IMPL_REF_BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:7:1
   |
LL | const IMPL_REF_BAR: u32 = GlobalImplRef::BAR;
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `IMPL_REF_BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:7:1
   |
LL | const IMPL_REF_BAR: u32 = GlobalImplRef::BAR;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `<impl at $DIR/issue-24949-assoc-const-static-recursion-impl.rs:11:1: 11:19>::BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:12:5
   |
LL |     const BAR: u32 = IMPL_REF_BAR;
   |     ^^^^^^^^^^^^^^
note: ...which requires caching mir of `<impl at $DIR/issue-24949-assoc-const-static-recursion-impl.rs:11:1: 11:19>::BAR` for CTFE...
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:12:5
   |
LL |     const BAR: u32 = IMPL_REF_BAR;
   |     ^^^^^^^^^^^^^^
   = note: ...which again requires elaborating drops for `<impl at $DIR/issue-24949-assoc-const-static-recursion-impl.rs:11:1: 11:19>::BAR`, completing the cycle
   = note: cycle used when running analysis passes on this crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
